organization create/update scrollbar fix

--- a/origen/static/css/style_orgcreate.css
+++ b/origen/static/css/style_orgcreate.css
@@ -1,18 +1,12 @@
 /*** MEDIA QUERIES ***/
 
 /* for screen size less than 500px (Mobile View) */
-@media only screen and (max-width: 574px){
-
-    .main-content{
-        /* height: auto; */
-        height: 100vh;
-    }
-
-    .hugecontainer{
+@media only screen and (max-width: 574px) {
+    .hugecontainer {
         margin-top: -40px;
     }
 
-    .createorgnavbar{
+    .createorgnavbar {
         text-align: center;
     }
 
@@ -105,11 +99,7 @@
 
 
 /* for screen size between 575px to 850px */
-@media screen and (min-width: 575px) and (max-width: 850px){
-
-    .main-content{
-        height: 100vh;
-    }
+@media screen and (min-width: 575px) and (max-width: 850px) {
 
     .hugecontainer{
         margin-top: -40px;
@@ -287,9 +277,6 @@
 
 /* for screen size between 850 to 1250px */
 @media screen and (min-width: 850px) and (max-width: 1249px) {
-    .main-content{
-        height: 100vh;
-    }
 
     .hugecontainer{
         margin-top: -40px;
@@ -471,10 +458,6 @@
 
 /* when screen size is greater than 1250px (Desktop View) */
 @media screen and (min-width: 1250px) {
-
-    .main-content {
-        height: 100vh;
-    }
 
     .hugecontainer {
         margin-top: -40px;
